added life to game.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ $(function(){
                 
                 for(i=0; i<trialsLeft; i++){
             
-            $("#trialsLeft").append(" x ");
+            $("#trialsLeft").append('<img src="images/heart.png" class="life">');
         }
             }
         </script>
